# horde

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/modules/: client.nix  home-manager.nix  nixos.nix  runner.nix  server.nix
scripts/: horde-gh-app-credential.sh  horde-run.sh  horde.sh
